Fix some tags are covered by footer on landing page connects #50

--- a/vue-project/src/styles/app.scss
+++ b/vue-project/src/styles/app.scss
@@ -149,6 +149,7 @@ nav {
     .tags-container {
         padding: 30px;
         font-size: 14px;
+        margin-bottom: 100px;
 
         h4 {
             text-transform: uppercase;
